// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestExamples Link Class is changed when hovered 1`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
   
</a>
`;

exports[`TestExamples Link Class is changed when hovered 2`] = `
<a
  className="hovered"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
   
</a>
`;

exports[`TestExamples Link Class is changed when hovered 3`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
   
</a>
`;
